...
}

class WeatherViewController: UIViewController {

    // MARK: - Properties

    private var collectionView: UICollectionView!
    private var cellModels: [CellModel] = [] {
        didSet {
            collectionView.reloadData()
        }
    }
    let cell = Cell()
...
