//
//  WeatherUITests.swift
//  WeatherUITests
//
//  Created by Екатерина Вишневская - ВТБ on 20.07.2020.
//  Copyright © 2020 ВТБ Юниор iOS. All rights reserved.
//

import XCTest

class WeatherUITests: XCTestCase {
    
    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        
        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }
    
    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()
        
        
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }
    
    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTOSSignpostMetric.applicationLaunch]) {
                XCUIApplication().launch()
            }
        }
    }
    
    func testSwiping() {
        
        let app = XCUIApplication()
        app.launch()
        
        let collectionView = app.collectionViews["collectionView"]
        XCTAssertTrue(collectionView.exists)
        
        collectionView.swipeLeft()
        collectionView.swipeLeft()
        collectionView.swipeLeft()
        collectionView.swipeLeft()
        
//        let pageView = app.scrollViews["pageView"]
//        XCTAssertTrue(pageView.exists)
//
//        pageView.swipeLeft()
//        pageView.swipeLeft()
//        pageView.swipeLeft()
//        pageView.swipeLeft()
//
//        let weather = app.staticTexts["locationLabel"]
//        let location = app.staticTexts["weatherLabel"]
//        let image = app.images["image"]
//
//        XCTAssertTrue(weather.exists)
//        XCTAssertTrue(location.exists)
//        XCTAssertTrue(image.exists)
        
        app.terminate()
        
    }
}
